Telium- login fields alignment, space issue in popup resolved, hiding login fields

--- a/nextmagentacloud21/core/css/server.css
+++ b/nextmagentacloud21/core/css/server.css
@@ -2393,6 +2393,15 @@ opacity: unset !important;
     color: white !important;
     }
 
+  .visibility-hidden {
+    visibility: hidden;
+  }
+
+  /*Telium popup css */
+  .cl-main .cl-link {
+    color: #00739f !important;
+  }
+
   /*Responsive Styling*/
 
  @media screen and (max-width: 375px) {
